From c40eac9 (closure):
======================

In prisim/closure.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
include flag weights in the Fourier transform

From 256f4aa (closure):
======================

In prisim/closure.py,

(*) Add keys 'tbins' and 'dtbins' in attribute dictionary cpinfo of
class ClosurePhase. Update docstring of class ClosurePhase accordingly
(*) Add keys 'triads', 'triads_ind', 'lst', 'lst_ind', 'dlst' in the
dictionary returned by mymber function compute_power_spectrum() of
class ClosurePhaseDelaySpectrum. Update member function docstring
accordingly.

From d9256a3 (closure):
======================

In prisim/closure.py,

(*) Add member function subset() along with docstring under class
ClosurePhaseDelaySpectrum. Update class docstring accordingly
(*) Add input keyword selection to member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum. Update
member function docstring accordingly
(*) Update format for input keyword cpds in member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum. Update
member function docstring accordingly

From c5faaba (closure):
======================

In prisim/closure.py,

(*) Import astropy.cosmology, scipy.constants, astroutils.constants,
prisim.delay_spectrum
(*) Specify default cosmology to be Planck 2015 cosmological
parameters with H0 = 100 h km/s/Mpc
(*) Add docstring to member function FT() of class
ClosurePhaseDelaySpectrum
(*) Add member function compute_power_spectrum() along with docstring
under class ClosurePhaseDelaySpectrum. Update member function
docstring accordingly
(*) Update docstring of class ClosurePhaseDelaySpectrum with info on
attribute cPhaseDS and cPhaseDS_resampled
(*) Update docstring of class ClosurePhaseDelaySpectrum

From 36465d0 (closure):
======================

In prisim/closure.py,

(*) In member function __init__() of class ClosurePhaseDelaySpectrum,
initialize attribute cPhaseDS_resampled